# clash-ila

./: .gitignore  README.md  cabal.project  flake.nix  log
.github/workflows/: haskell.yml  release.yml  rust.yml
cli-macro/: Cargo.toml
cli-macro/src/: lib.rs
cli-macro/tests/: test.rs
ila/: clash-ila.cabal  makefile  orangecrab.cabal
ila-cli/: Cargo.nix  Cargo.toml  ilaconf.json
ila-cli/src/: cli.rs  cli_registers.rs  communication.rs  config.rs  export.rs  main.rs  packet.rs  predicates.rs  predicates_tui.rs  trigger.rs  tui.rs  vcd.rs  wishbone.rs
ila-cli/src/ui/: checkbox.rs  listbox.rs  mod.rs  textinput.rs
ila/_build/01-clash/: Blink.hi
ila/_build/02-hdl/: Blink_topEntity_etherboneC.v  Blink_topEntity_probeHandlerC.v  Blink_topEntity_recordBuilderC.v  Blink_topEntity_recordHandlerC.v  Blink_topEntity_recordProcessorC.v  Blink_topEntity_wishboneMasterC.v  clash-manifest.json  topEntity.sdc  topEntity.v  topEntity_ilaconf_BA86056BF643B6E4.json
ila/_build/04-bitstream/: topEntity.bit  topEntity.config
ila/examples/: ClashIlaDemo.hs
ila/src/: Communication.hs  ConfigGen.hs  Ila.hs  SignalFieldSelectors.hs  WishboneUtils.hs
ila/src/Clash/: Ila.hs
ila/src/Clash/Ila/: Configurator.hs  result
ila/src/Clash/Ila/Internal/: Communication.hs  RingBuffer.hs  SignalFieldSelectors.hs  WishboneUtils.hs
ila/tests/: Tests.hs
ila/tests/Tests/: Communication.hs  RingBuffer.hs
ila/top/: Blink.hs
orangecrab/: README.md  build.cfg.local  makefile  orangecrab.cabal
orangecrab/src/: Communication.hs  ConfigGen.hs  Domain.hs  Ila.hs  Packet.hs  Pmod.hs  Probes.hs  RGB.hs  RingBuffer.hs  WishboneUtils.hs
orangecrab/tests/: RingBuffer.hs  Test.hs  Tests.hs
orangecrab/tests/Tests/: Communication.hs  Packet.hs  RingBuffer.hs
orangecrab/top/: Blink.hs
