[package]
name = "ila-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
num = "0.4.3"
rat-focus = "1.0.1"
rat-text = "1.0.4"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
serialport = { version = "4.7.0", default-features = false }
vcd = "0.7.0"
cli-macro = { path = "../cli-macro" }
